--- a/static/styles.css
+++ b/static/styles.css
@@ -82,7 +82,8 @@ button {
     border: 1px solid green;
     border-radius: 5px;
     padding: 10px;
-    font-size: 18px;
+    font-size: 16px;
+    font-weight: bold;
     background-color: lightgreen;
     text-transform: uppercase;
 }
